[gd_scene load_steps=3 format=3 uid="uid://c6l1unw4rab8o"]

[ext_resource type="Texture2D" uid="uid://drsah5bbq72o0" path="res://Backgrounds/SDP_loop_background.png" id="1_j1834"]
[ext_resource type="Script" path="res://Puzzles/loops_puzzle/fake_loop_ui.gd" id="1_lcbdv"]

[node name="Fake Loop UI" type="Sprite2D"]
modulate = Color(0.172549, 0.568627, 0.788235, 1)
position = Vector2(936, 510)
scale = Vector2(1.62031, 1.73333)
texture = ExtResource("1_j1834")
script = ExtResource("1_lcbdv")

[node name="Window" type="Window" parent="."]
initial_position = 1
size = Vector2i(1280, 720)
unresizable = true
borderless = true

[node name="ColorRect" type="ColorRect" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.898039, 0, 0.352941, 1)

[node name="Exit" type="Button" parent="Window/ColorRect"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "EXIT"

[node name="Enter" type="Button" parent="Window/ColorRect"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Enter"

[node name="VBoxContainer" type="VBoxContainer" parent="Window"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -34.0
offset_right = 100.5
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="Want Item" type="Label" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Want Item #"

[node name="Current Item" type="Label" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Current Item Number"

[node name="HBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 400
alignment = 1

[node name="Increment" type="Button" parent="Window/VBoxContainer/HBoxContainer"]
modulate = Color(0.478431, 0.67451, 0.678431, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "+"
icon_alignment = 1

[node name="Decrement" type="Button" parent="Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "-"

[connection signal="pressed" from="Window/ColorRect/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Window/ColorRect/Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/HBoxContainer/Increment" to="." method="_on_increment_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/HBoxContainer/Decrement" to="." method="_on_decrement_pressed"]
